Se terminan los dtos y sus validaciones
